Completed Week3 note